--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>LÂM PHÚ QUÝ Thiên Chánh Tính</title>
+    <title>lâm Phú Quý</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&amp;family=Roboto:wght@300;400;500;700&amp;display=swap"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&amp;family=Roboto:wght@300;400;500;700&amp;display=swap" media="print" onload="this.media='all'"/>
@@ -28,7 +28,7 @@
     <header class="d-print-none">
       <div class="container text-center text-lg-left">
         <div class="pt-4 clearfix">
-          <h1 class="site-title mb-0">LÂM PHÚ QUÝ</h1>
+          <h1 class="site-title mb-0">Lâm Phú Quý</h1>
           <div class="site-nav"> 
             <nav role="navigation">
               <ul class="nav justify-content-center">
@@ -58,24 +58,24 @@
   <div class="shadow-1-strong bg-white my-5" id="intro">
     <div class="bg-info text-white">
       <div class="cover bg-image"><img src="images/header-background.jpg"/>
-        <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);backdrop-filter: blur(2px);">
+        <div class="mask" style="background-color: rgba(238, 8, 200, 0.7);backdrop-filter: blur(2px);">
           <div class="text-center p-5">
             <div class="avatar p-1"><img class="img-thumbnail shadow-2-strong" src="images/avatar.jpg" width="160" height="160"/></div>
             <div class="header-bio mt-3">
               <div data-aos="zoom-in" data-aos-delay="0">
-                <h2 class="h1">LÂM PHÚ QUÝ</h2>
+                <h2 class="h1">LÂM PHÚ Quý
                 <p>Front-end Developer and Graphic Designer</p>
               </div>
               <div class="header-social mb-3 d-print-none" data-aos="zoom-in" data-aos-delay="200">
                 <nav role="navigation">
                   <ul class="nav justify-content-center">
-                    <li class="nav-item"><a class="nav-link" href="https://https://vt.tiktok.com/ZSFcsySUW/" title="Twitter"><i class="fab fa-twitter"></i><span class="menu-title sr-only">Twitter</span></a>
+                    <li class="nav-item"><a class="nav-link" href="https://twitter.com/templateflip" title="Twitter"><i class="fab fa-twitter"></i><span class="menu-title sr-only">Twitter</span></a>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/quyhyz?mibextid=LQQJ4d" title="Facebook"><i class="fab fa-facebook"></i><span class="menu-title sr-only">Facebook</span></a>
+                    <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/templateflip" title="Facebook"><i class="fab fa-facebook"></i><span class="menu-title sr-only">Facebook</span></a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/templateflip" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="https://github.com/Lamphuquy/Lamphuquy.github.io" title="Github"><i class="fab fa-github"></i><span class="menu-title sr-only">Github</span></a>
+                    <li class="nav-item"><a class="nav-link" href="https://github.com/templateflip" title="Github"><i class="fab fa-github"></i><span class="menu-title sr-only">Github</span></a>
                     </li>
                   </ul>
                 </nav>
@@ -92,7 +92,7 @@
       <div class="row">
         <div class="col-md-6">
           <h2 class="h2 fw-light mb-4">About Me</h2>
-          <p>HXin chào! Tôi là LÂM PHÚ QUÝ. Tôi đam mê thiết kế UI/UX và Thiết kế Web. Tôi là một nhà phát triển front-end lành nghề và thành thạo các công cụ thiết kế đồ họa như Photoshop và Sketch <strong>front-end developer</strong> and master of graphic design tools such as Photoshop and Sketch. I am a quick learner and a team worker that gets the job done.</p>
+          <p>Xin chào! Tôi là LÂM PHÚ QUÝ. Tôi đam mê thiết kế UI/UX và Thiết kế Web. Tôi là một người có tay nghề <strong>front-end developer</strong> and master of graphic design tools such as Photoshop and Sketch. I am a quick learner and a team worker that gets the job done.</p>
           <p>I can easily capitalize on low hanging fruits and quickly maximize timely deliverables for real-time schemas.</p>
         </div>
         <div class="col-md-5 offset-lg-1">
@@ -102,31 +102,31 @@
               <div class="pb-2 fw-bolder"><i class="far fa-calendar-alt pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Age</div>
             </div>
             <div class="col-sm-7">
-              <div class="pb-2">29</div>
+              <div class="pb-2">19</div>
             </div>
             <div class="col-sm-5">
               <div class="pb-2 fw-bolder"><i class="far fa-envelope pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Email</div>
             </div>
             <div class="col-sm-7">
-              <div class="pb-2">lamphuquy04@gmail.com</div>
+              <div class="pb-2">LAMPHUQUY04@GMAIL.COM</div>
             </div>
             <div class="col-sm-5">
               <div class="pb-2 fw-bolder"><i class="fab fa-skype pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Skype</div>
             </div>
             <div class="col-sm-7">
-              <div class="pb-2">lamphuquy04@gmail.com</div>
+              <div class="pb-2">LAMPHUQUY04@GMAIL.COM</div>
             </div>
             <div class="col-sm-5">
               <div class="pb-2 fw-bolder"><i class="fas fa-phone pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Phone</div>
             </div>
             <div class="col-sm-7">
-              <div class="pb-2">+840773280093</div>
+              <div class="pb-2">+84773280093</div>
             </div>
             <div class="col-sm-5">
               <div class="pb-2 fw-bolder"><i class="fas fa-map-marker-alt pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Address</div>
             </div>
             <div class="col-sm-7">
-              <div class="pb-2">HÀ NỘI, ĐỒNG NAI</div>
+              <div class="pb-2">LONG TÂN, NHƠN TRẠCH,ĐỒNG NAI</div>
             </div>
           </div>
         </div>
@@ -138,7 +138,7 @@
       <h2 class="h2 fw-light mb-4">Professional Skills</h2>
       <div class="row">
         <div class="col-md-6">
-          <div class="mb-3"><span class="fw-bolder">TẢI</span>
+          <div class="mb-3"><span class="fw-bolder">HTML</span>
             <div class="progress my-2 rounded" style="height: 20px">
               <div class="progress-bar bg-info" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">Master</div>
             </div>
@@ -324,8 +324,8 @@
       <div class="row mb-4">
         <div class="col-md-5" data-aos="fade-left" data-aos-delay="200">
           <div class="mt-1">
-            <div class="h6"><i class="fas fa-phone pe-2 text-muted" style="width:24px;opacity:0.85;"></i> +0718-111-0011</div>
-            <div class="h6"><i class="far fa-envelope pe-2 text-muted" style="width:24px;opacity:0.85;"></i> walter@company.com</div>
+            <div class="h6"><i class="fas fa-phone pe-2 text-muted" style="width:24px;opacity:0.85;"></i> +84773280093</div>
+            <div class="h6"><i class="far fa-envelope pe-2 text-muted" style="width:24px;opacity:0.85;"></i> LAMPHUQUY04@GMAIL.COM</div>
           </div>
           <div class="mt-5 d-print-none"><form action="https://formspree.io/your@email.com"
     method="POST">
@@ -354,7 +354,7 @@
     <footer class="pt-4 pb-4 text-muted text-center d-print-none">
       <div class="container">
         <div class="my-3">
-          <div class="h4">https://Lamphuquy.github.io</div>
+          <div class="h4"></div>
           <div class="footer-nav">
             <nav role="navigation">
               <ul class="nav justify-content-center">
